Add playlists to category section

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -195,6 +195,89 @@
                         <a href="#" class="btn btn-option">Jazz</a>
                     </div>
                 </div>
+
+                <div class="cat-card__container">
+                    <div class="cat-card d-flex align-items-center gap-4">
+                        <img src="./img/categoria-1.jpg" alt="" class="cat-card__img">
+                        <div class="cat-card__content">
+                            <h4 class="cat-card__title">Canciones para levantar el ánimo</h4>
+                            <a href="#" class="btn-see cat-card__btn d-flex align-items-center gap-3">
+                                <i class="fa-solid fa-circle-play"></i>
+                                Escuchar
+                            </a>
+                        </div>
+                    </div>
+                    <div class="cat-card d-flex align-items-center gap-4">
+                        <img src="./img/categoria-2.jpg" alt="" class="cat-card__img">
+                        <div class="cat-card__content">
+                            <h4 class="cat-card__title">Noches de Rock clásico</h4>
+                            <a href="#" class="btn-see cat-card__btn d-flex align-items-center gap-3">
+                                <i class="fa-solid fa-circle-play"></i>
+                                Escuchar
+                            </a>
+                        </div>
+                    </div>
+                    <div class="cat-card d-flex align-items-center gap-4">
+                        <img src="./img/categoria-3.jpg" alt="" class="cat-card__img">
+                        <div class="cat-card__content">
+                            <h4 class="cat-card__title">Electro Beats para tus entrenamientos</h4>
+                            <a href="#" class="btn-see cat-card__btn d-flex align-items-center gap-3">
+                                <i class="fa-solid fa-circle-play"></i>
+                                Escuchar
+                            </a>
+                        </div>
+                    </div>
+                    <div class="cat-card d-flex align-items-center gap-4">
+                        <img src="./img/categoria-4.jpg" alt="" class="cat-card__img">
+                        <div class="cat-card__content">
+                            <h4 class="cat-card__title">Flow de Hip-hop urbano</h4>
+                            <a href="#" class="btn-see cat-card__btn d-flex align-items-center gap-3">
+                                <i class="fa-solid fa-circle-play"></i>
+                                Escuchar
+                            </a>
+                        </div>
+                    </div>
+                    <div class="cat-card d-flex align-items-center gap-4">
+                        <img src="./img/categoria-5.jpg" alt="" class="cat-card__img">
+                        <div class="cat-card__content">
+                            <h4 class="cat-card__title">Jazz suave para relajarse</h4>
+                            <a href="#" class="btn-see cat-card__btn d-flex align-items-center gap-3">
+                                <i class="fa-solid fa-circle-play"></i>
+                                Escuchar
+                            </a>
+                        </div>
+                    </div>
+                    <div class="cat-card d-flex align-items-center gap-4">
+                        <img src="./img/categoria-6.jpg" alt="" class="cat-card__img">
+                        <div class="cat-card__content">
+                            <h4 class="cat-card__title">Éxitos del Pop contemporáneo</h4>
+                            <a href="#" class="btn-see cat-card__btn d-flex align-items-center gap-3">
+                                <i class="fa-solid fa-circle-play"></i>
+                                Escuchar
+                            </a>
+                        </div>
+                    </div>
+                    <div class="cat-card d-flex align-items-center gap-4">
+                        <img src="./img/categoria-7.jpg" alt="" class="cat-card__img">
+                        <div class="cat-card__content">
+                            <h4 class="cat-card__title">Ritmos latinos calientes</h4>
+                            <a href="#" class="btn-see cat-card__btn d-flex align-items-center gap-3">
+                                <i class="fa-solid fa-circle-play"></i>
+                                Escuchar
+                            </a>
+                        </div>
+                    </div>
+                    <div class="cat-card d-flex align-items-center gap-4">
+                        <img src="./img/categoria-8.jpg" alt="" class="cat-card__img">
+                        <div class="cat-card__content">
+                            <h4 class="cat-card__title">Música clásica para inspirarte</h4>
+                            <a href="#" class="btn-see cat-card__btn d-flex align-items-center gap-3">
+                                <i class="fa-solid fa-circle-play"></i>
+                                Escuchar
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
