Add resgiter section

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -278,6 +278,20 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="cat-register">
+                    <div class="cat-register__content d-flex flex-column gap-4">
+                        <h2 class="section-title">¿Estás listo para descubrir nueva música y expandir tus horizontes sonoros?</h2>
+                        <p class="cat-register__text">Suscríbete mensualmente y desbloquea un mundo musical sin límites.</p>
+                        <a href="#" class="btn btn-card">
+                            Regístrate
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                        </a>
+                    </div>
+                    <div class="cat-register__img">
+                        <img src="./img/subscribe-singer.png" alt="">
+                    </div>
+                </div>
             </div>
         </section>
     </main>
