Add plan section

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -292,6 +292,14 @@
                         <img src="./img/subscribe-singer.png" alt="">
                     </div>
                 </div>
+
+                <div class="cat-subscribe d-flex flex-column gap-5 text-center">
+                    <h2 class="section-title">Elige el plan perfecto para disfrutar de la <span>mejor música</span></h2>
+                    <div class="cat-subscribe__btn-container">
+                        <a href="#" class=" btn cat-subscribe__btn">Mensual</a>
+                        <a href="#" class="btn cat-subscribe__btn">Anual</a>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
