Add price section

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -299,6 +299,61 @@
                         <a href="#" class=" btn cat-subscribe__btn">Mensual</a>
                         <a href="#" class="btn cat-subscribe__btn">Anual</a>
                     </div>
+                    <div class="cat-subscribe__plan-container d-flex align-items-center ">
+                        <div class="cat-subscribe__plan d-flex flex-column gap-3">
+                            <h3 class="cat-subscribe__plan-title">Básico</h3>
+                            <p class="cat-subscribe__plan-price">15.99€</p>
+                            <ul>
+                                <li>
+                                    <i class="fa-solid fa-circle-check"></i>
+                                    Acceso ilimitado a nuestra amplia biblioteca musical.
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-circle-check"></i>
+                                    Escucha sin interrupciones con anuncios limitados.
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-circle-check"></i>
+                                    Explora y descubre nuevas playlists y artistas destacados.
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-circle-check"></i>
+                                    Creación de listas de reproducción personalizadas.
+                                </li>
+                            </ul>
+                            <a href="#" class="btn btn-black">
+                                Prueba gratis
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </a>
+                        </div>
+
+                        <div class="cat-subscribe__plan d-flex flex-column gap-3 cat-subscribe__black">
+                            <h3 class="cat-subscribe__plan-title">Premium</h3>
+                            <p class="cat-subscribe__plan-price">25.99€</p>
+                            <ul>
+                                <li>
+                                    <i class="fa-solid fa-circle-check"></i>
+                                    Todas las características del Plan Básico incluidas.
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-circle-check"></i>
+                                    Reproducción en alta calidad de audio sin pérdida.
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-circle-check"></i>
+                                    Sin anuncios en ningún momento para una experiencia ininterrumpida.
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-circle-check"></i>
+                                    Descarga tus canciones favoritas para disfrutarlas sin conexión.
+                                </li>
+                            </ul>
+                            <a href="#" class="btn btn-black">
+                                Prueba gratis
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
