Add newsletter section

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -361,30 +361,26 @@
                 </div>
             </div>
         </section>
-        <div class="cat-subscribe ">
-            
-        </div>
 
-                <div class="cat-email">
-                    <div class="cat-email__user">
-                        <img src="./img/register-user1.jpg" alt="">
-                        <img src="./img/register-user2.jpg" alt="">
-                        <img src="./img/register-user3.jpg" alt="">
-                    </div>
-
-                    <div class="cat-email__content">
-                        <h2 class="section-title">Regístrate para recibir novedades y canciones más populares cada semana!</h2>
-                        <form action="" class="cat-email__form">
-                            <input type="email" placeholder="Inserta tu correo electrónico" name="email">
-                            <button type="submit">
-                                <i class="fa-solid fa-arrow-right"></i>
-                            </button>
-                        </form>
-                    </div>
-
-                    <img src="./img/register-user.png" class="cat-email__img">
-
+        <section class="newsletter ">
+            <div class="container newsletter-container">
+                <div class="newsletter-users">
+                    <div class="newsletter-users__one"></div>
+                    <div class="newsletter-users__two"></div>
+                    <div class="newsletter-users__three"></div>
                 </div>
+
+                <div class="newsletter-content">
+                    <h2 class="section-title mb-4">Regístrate para recibir novedades y canciones más populares cada semana!</h2>
+                    <form action="" class="newsletter-form">
+                        <input type="email" placeholder="Inserta tu correo electrónico" name="email">
+                        <button type="submit">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </button>
+                    </form>
+                </div>
+
+                <img src="./img/register-user.png" class="newsletter-img">
             </div>
         </section>
     </main>
