--- a/undersound/index.html
+++ b/undersound/index.html
@@ -384,5 +384,49 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <nav>
+            <div class="container">
+                <div class="row row-cols-3">
+                    <a href="#" class="navbar-brand col">
+                        <img class="img-fluid" src="./img/logo.svg" alt="logo of undersound" width="25px">
+                        <p>UnderSound</p>
+                    </a>
+                    <div class="nav-container d-flex align-items-start col">
+                        <div class="nav d-flex flex-column">
+                            <h3 class="nav-title">Enlaces Rápidos</h3>
+                            <ul class="navbar-nav d-flex flex-column">
+                                <li class="nav-item"><a href="#" class="nav-link">Información</a></li>
+                                <li class="nav-item"><a href="#" class="nav-link">Características</a></li>
+                                <li class="nav-item"><a href="#" class="nav-link">Categorías</a></li>
+                                <li class="nav-item"><a href="#" class="nav-link">Precios</a></li>
+                            </ul>
+                        </div>
+                        <div class="nav d-lex flex-column">
+                            <h3 class="nav-title">Otros Enlaces</h3>
+                            <ul class="navbar-nav d-flex flex-column">
+                                <li class="nav-item"><a href="#" class="nav-link">Privacidad</a></li>
+                                <li class="nav-item"><a href="#" class="nav-link">Términos y Condiciones</a></li>
+                                <li class="nav-item"><a href="#" class="nav-link">FAQ</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="socials col">
+                        <a href="#" target="_blank" class="socials-link">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="#" target="_blank" class="socials-link">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href="#" target="_blank" class="socials-link">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        
+                    </div>
+                </div>                
+            </div>
+        </nav>
+    </footer>
 </body>
 </html>
