Complete desktop view

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -25,10 +25,10 @@
                 </a>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a href="#" class="nav-link">Información</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Características</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Categorías</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Precios</a></li>
+                        <li class="nav-item"><a href="#info" class="nav-link">Información</a></li>
+                        <li class="nav-item"><a href="#features" class="nav-link">Características</a></li>
+                        <li class="nav-item"><a href="#categories" class="nav-link">Categorías</a></li>
+                        <li class="nav-item"><a href="#price" class="nav-link">Precios</a></li>
                     </ul>
                 </div>
             </div>
@@ -77,17 +77,17 @@
     </header>
 
     <main>
-        <section class="info">
+        <section class="info" id="info">
             <div class="container text-center">
                 <h2 class="info-title section-title">Descubre, Aprende y <span>Disfruta</span></h2>
                 <p class="info-text">En UnderSound, creemos que la música es mucho más que solo entretenimiento. Es una fuente de aprendizaje, inspiración y conexión. Explora nuevos géneros, sumérgete en melodías introspectivas y rompe barreras con sonidos alternativos. Únete a nosotros, regístrate ahora y desata tu pasión por la música underground.</p>
                 <a class="btn mb-5">Regístrate!</a>
-                <div class="info-card__container d-flex align-items-center gap-5">
+                <div class="info-card__container d-flex align-items-center justify-content-center gap-5">
                     <div class="info-card">
                         <img src="./img/learn-card1.png" alt="" class="info-card__img">
                         <h3 class="info-card__title">Ritmos étnicos del mundo</h3>
                         <p class="info-card__text">Expande tus horizontes musicales y déjate cautivar por la diversidad del sonido global</p>
-                        <a href="#" class="btn btn-card">
+                        <a href="" onclick="return false" class="btn btn-card">
                             <i class="fa-regular fa-circle-play"></i>
                             Escuchar
                         </a>
@@ -96,7 +96,7 @@
                         <img src="./img/learn-card2.png" alt="" class="info-card__img">
                         <h3 class="info-card__title">Melodías introspectivas</h3>
                         <p class="info-card__text">Deja que la música te guíe hacia nuevos horizontes de inspiración</p>
-                        <a href="#" class="btn btn-card">
+                        <a href="" onclick="return false" class="btn btn-card">
                             <i class="fa-regular fa-circle-play"></i>
                             Escuchar
                         </a>
@@ -105,7 +105,7 @@
                         <img src="./img/learn-card3.png" alt="" class="info-card__img">
                         <h3 class="info-card__title">Rompiendo barreras</h3>
                         <p class="info-card__text">Expande tus horizontes musicales y déjate cautivar por la diversidad del sonido global</p>
-                        <a href="#" class="btn btn-card">
+                        <a href="" onclick="return false" class="btn btn-card">
                             <i class="fa-regular fa-circle-play"></i>
                             Escuchar
                         </a>
@@ -114,7 +114,7 @@
             </div>
         </section>
 
-        <section class="features">
+        <section class="features" id="features">
             <div class="container d-flex align-items-end">
                 <div class="features-content d-flex flex-column gap-3">
                     <h2 class="features-title section-title mb-4">¿Qué nos hace <span>únicos</span>?</h2>
@@ -138,7 +138,7 @@
                         </li>
                     </ul>
 
-                    <a href="#" class="btn">Saber más</a>
+                    <a href="" onclick="return false" class="btn">Saber más</a>
                 </div>
                 <div class="features-img">
                     <img src="./img/title-svg-sound-wave.png" alt="" class="features-img__wave">
@@ -179,7 +179,7 @@
             </div>
         </section>
 
-        <section class="categories">
+        <section class="categories" id="categories">
             <div class="container">
                 <div class="categories-hero d-flex gap-5">
                     <div class="categories-content">
@@ -187,12 +187,12 @@
                         <p class="categories-text">UnderSound ofrece una amplia variedad de categorías musicales para satisfacer todos los gustos. Descubre nuevos estilos y géneros en nuestra plataforma.</p>
                     </div>
                     <div class="categories-options d-flex gap-5 align-items-start justify-content-center">
-                        <a href="#" class="btn">Todas</a>
-                        <a href="#" class="btn btn-option">Pop</a>
-                        <a href="#" class="btn btn-option">Rock</a>
-                        <a href="#" class="btn btn-option">Electrónica</a>
-                        <a href="#" class="btn btn-option">Hip-hop</a>
-                        <a href="#" class="btn btn-option">Jazz</a>
+                        <a href="" onclick="return false" class="btn">Todas</a>
+                        <a href="" onclick="return false" class="btn btn-option">Pop</a>
+                        <a href="" onclick="return false" class="btn btn-option">Rock</a>
+                        <a href="" onclick="return false" class="btn btn-option">Electrónica</a>
+                        <a href="" onclick="return false" class="btn btn-option">Hip-hop</a>
+                        <a href="" onclick="return false" class="btn btn-option">Jazz</a>
                     </div>
                 </div>
 
@@ -201,7 +201,7 @@
                         <img src="./img/categoria-1.jpg" alt="" class="categories-card__img">
                         <div class="categories-card__content">
                             <h4 class="categories-card__title">Canciones para levantar el ánimo</h4>
-                            <a href="#" class="btn-see categories-card__btn d-flex align-items-center gap-3">
+                            <a href="" onclick="return false" class="btn-see categories-card__btn d-flex align-items-center gap-3">
                                 <i class="fa-solid fa-circle-play"></i>
                                 Escuchar
                             </a>
@@ -211,7 +211,7 @@
                         <img src="./img/categoria-2.jpg" alt="" class="categories-card__img">
                         <div class="categories-card__content">
                             <h4 class="categories-card__title">Noches de Rock clásico</h4>
-                            <a href="#" class="btn-see categories-card__btn d-flex align-items-center gap-3">
+                            <a href="" onclick="return false" class="btn-see categories-card__btn d-flex align-items-center gap-3">
                                 <i class="fa-solid fa-circle-play"></i>
                                 Escuchar
                             </a>
@@ -221,7 +221,7 @@
                         <img src="./img/categoria-3.jpg" alt="" class="categories-card__img">
                         <div class="categories-card__content">
                             <h4 class="categories-card__title">Electro Beats para tus entrenamientos</h4>
-                            <a href="#" class="btn-see categories-card__btn d-flex align-items-center gap-3">
+                            <a href="" onclick="return false" class="btn-see categories-card__btn d-flex align-items-center gap-3">
                                 <i class="fa-solid fa-circle-play"></i>
                                 Escuchar
                             </a>
@@ -231,7 +231,7 @@
                         <img src="./img/categoria-4.jpg" alt="" class="categories-card__img">
                         <div class="categories-card__content">
                             <h4 class="categories-card__title">Flow de Hip-hop urbano</h4>
-                            <a href="#" class="btn-see categories-card__btn d-flex align-items-center gap-3">
+                            <a href="" onclick="return false" class="btn-see categories-card__btn d-flex align-items-center gap-3">
                                 <i class="fa-solid fa-circle-play"></i>
                                 Escuchar
                             </a>
@@ -241,7 +241,7 @@
                         <img src="./img/categoria-5.jpg" alt="" class="categories-card__img">
                         <div class="categories-card__content">
                             <h4 class="categories-card__title">Jazz suave para relajarse</h4>
-                            <a href="#" class="btn-see categories-card__btn d-flex align-items-center gap-3">
+                            <a href="" onclick="return false" class="btn-see categories-card__btn d-flex align-items-center gap-3">
                                 <i class="fa-solid fa-circle-play"></i>
                                 Escuchar
                             </a>
@@ -251,7 +251,7 @@
                         <img src="./img/categoria-6.jpg" alt="" class="categories-card__img">
                         <div class="categories-card__content">
                             <h4 class="categories-card__title">Éxitos del Pop contemporáneo</h4>
-                            <a href="#" class="btn-see categories-card__btn d-flex align-items-center gap-3">
+                            <a href="" onclick="return false" class="btn-see categories-card__btn d-flex align-items-center gap-3">
                                 <i class="fa-solid fa-circle-play"></i>
                                 Escuchar
                             </a>
@@ -261,7 +261,7 @@
                         <img src="./img/categoria-7.jpg" alt="" class="categories-card__img">
                         <div class="categories-card__content">
                             <h4 class="categories-card__title">Ritmos latinos calientes</h4>
-                            <a href="#" class="btn-see categories-card__btn d-flex align-items-center gap-3">
+                            <a href="" onclick="return false" class="btn-see categories-card__btn d-flex align-items-center gap-3">
                                 <i class="fa-solid fa-circle-play"></i>
                                 Escuchar
                             </a>
@@ -271,7 +271,7 @@
                         <img src="./img/categoria-8.jpg" alt="" class="categories-card__img">
                         <div class="categories-card__content">
                             <h4 class="categories-card__title">Música clásica para inspirarte</h4>
-                            <a href="#" class="btn-see categories-card__btn d-flex align-items-center gap-3">
+                            <a href="" onclick="return false" class="btn-see categories-card__btn d-flex align-items-center gap-3">
                                 <i class="fa-solid fa-circle-play"></i>
                                 Escuchar
                             </a>
@@ -286,7 +286,7 @@
                 <div class="register-content d-flex flex-column gap-4">
                     <h2 class="section-title">¿Estás listo para descubrir nueva música y expandir tus horizontes sonoros?</h2>
                     <p class="register-text">Suscríbete mensualmente y desbloquea un mundo musical sin límites.</p>
-                    <a href="#" class="btn btn-card">
+                    <a href="" onclick="return false" class="btn btn-card">
                         Regístrate
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </a>
@@ -297,12 +297,12 @@
             </div>
         </section>
 
-        <section class="plan">
+        <section class="plan" id="price">
             <div class="container plan-container d-flex flex-column gap-5 text-center">
                 <h2 class="section-title">Elige el plan perfecto para disfrutar de la <span>mejor música</span></h2>
                 <div class="plan-btn__container">
-                    <a href="#" class=" btn plan-btn">Mensual</a>
-                    <a href="#" class="btn plan-btn">Anual</a>
+                    <a href="" onclick="return false" class=" btn plan-btn">Mensual</a>
+                    <a href="" onclick="return false" class="btn plan-btn">Anual</a>
                 </div>
                 <div class="plan-modal__container d-flex align-items-center ">
                     <div class="plan-modal d-flex flex-column gap-3">
@@ -326,7 +326,7 @@
                                 Creación de listas de reproducción personalizadas.
                             </li>
                         </ul>
-                        <a href="#" class="btn btn-black">
+                        <a href="" onclick="return false" class="btn btn-black">
                             Prueba gratis
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
@@ -353,7 +353,7 @@
                                 Descarga tus canciones favoritas para disfrutarlas sin conexión.
                             </li>
                         </ul>
-                        <a href="#" class="btn btn-black">
+                        <a href="" onclick="return false" class="btn btn-black">
                             Prueba gratis
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
@@ -388,38 +388,38 @@
     <footer>
         <nav>
             <div class="container">
-                <div class="row row-cols-3">
-                    <a href="#" class="navbar-brand col">
+                <div class="row row-cols-1 row-cols-lg-4 justify-content-between align-items-start">
+                    <a href="" onclick="return false" class="navbar-brand col">
                         <img class="img-fluid" src="./img/logo.svg" alt="logo of undersound" width="25px">
                         <p>UnderSound</p>
                     </a>
-                    <div class="nav-container d-flex align-items-start col">
+                    <div class="nav-container d-flex align-items-start justify-content-center col">
                         <div class="nav d-flex flex-column">
                             <h3 class="nav-title">Enlaces Rápidos</h3>
                             <ul class="navbar-nav d-flex flex-column">
-                                <li class="nav-item"><a href="#" class="nav-link">Información</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link">Características</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link">Categorías</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link">Precios</a></li>
+                                <li class="nav-item"><a href="#info" class="nav-link">Información</a></li>
+                                <li class="nav-item"><a href="#features" class="nav-link">Características</a></li>
+                                <li class="nav-item"><a href="#categories" class="nav-link">Categorías</a></li>
+                                <li class="nav-item"><a href="#price" class="nav-link">Precios</a></li>
                             </ul>
                         </div>
                         <div class="nav d-lex flex-column">
                             <h3 class="nav-title">Otros Enlaces</h3>
                             <ul class="navbar-nav d-flex flex-column">
-                                <li class="nav-item"><a href="#" class="nav-link">Privacidad</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link">Términos y Condiciones</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link">FAQ</a></li>
+                                <li class="nav-item"><a href="" onclick="return false" class="nav-link">Privacidad</a></li>
+                                <li class="nav-item"><a href="" onclick="return false" class="nav-link">Términos y Condiciones</a></li>
+                                <li class="nav-item"><a href="" onclick="return false" class="nav-link">FAQ</a></li>
                             </ul>
                         </div>
                     </div>
-                    <div class="socials col">
-                        <a href="#" target="_blank" class="socials-link">
+                    <div class="socials d-flex align-items-center justify-content-end gap-5 col">
+                        <a href="" onclick="return false" target="_blank" class="socials-link">
                             <i class="fa-brands fa-facebook"></i>
                         </a>
-                        <a href="#" target="_blank" class="socials-link">
+                        <a href="" onclick="return false" target="_blank" class="socials-link">
                             <i class="fa-brands fa-twitter"></i>
                         </a>
-                        <a href="#" target="_blank" class="socials-link">
+                        <a href="" onclick="return false" target="_blank" class="socials-link">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
                         
