Header and hero responsiveness

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -17,8 +17,8 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg">
-            <div class="container container-fluid">
+        <nav class="navbar navbar-expand-md">
+            <div class="header-container container container-fluid">
                 <a href="#" class="navbar-brand">
                     <img class="img-fluid" src="./img/logo.svg" alt="logo of undersound" width="25px">
                     <p>UnderSound</p>
@@ -31,15 +31,19 @@
                         <li class="nav-item"><a href="#price" class="nav-link">Precios</a></li>
                     </ul>
                 </div>
+
+                <div class="navbar-hero-img__container">
+                    <div class="navbar-hero-bg"></div>
+                    <div class="navbar-hero-img"></div>
+                </div>
             </div>
         </nav>
 
         <section class="hero container">
-            <div class="hero-img">
-                <div class="hero-img__container"></div>
-                <div class="hero-img__container"></div>
-            </div>
-            <div class="hero-content d-flex flex-column gap-3">
+
+            <div class="hero-img"></div>
+            
+            <div class="hero-content d-flex flex-column">
                 <h3 class="hero-subtitle">Descubre Nuevos Sonidos</h3>
                 <h1 class="hero-title">El Mejor Lugar Para Descubrir la <span>Vanguardia</span> Musical.</h1>
                 <img src="./img/line.svg" alt="" class="hero-line">
@@ -428,5 +432,9 @@
             </div>
         </nav>
     </footer>
+
+    <a href="#" class="up-btn">
+        <i class="fa-solid fa-chevron-up"></i>
+    </a>
 </body>
 </html>
