--- a/undersound/index.html
+++ b/undersound/index.html
@@ -32,6 +32,27 @@
                     </ul>
                 </div>
 
+                <div class="sidebar">
+                    <a href="#offCanvas" data-bs-toggle="offcanvas" role="button" aria-controls="offCanvas">
+                        <i class="fa-solid fa-bars"></i>
+                    </a>
+
+                    <div class="offcanvas offcanvas-start" tabindex="-1" id="offCanvas" aria-labelledby="offcanvasLabel">
+                        <div class="offcanvas-header mb-5">
+                            <h5 class="offcanvas-title" id="offcanvasLabel">Menú principal</h5>
+                            <button class="btn-close" type="button" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav">
+                                <li class="nav-item"><a href="#info" class="nav-link">Información</a></li>
+                                <li class="nav-item"><a href="#features" class="nav-link">Características</a></li>
+                                <li class="nav-item"><a href="#categories" class="nav-link">Categorías</a></li>
+                                <li class="nav-item"><a href="#price" class="nav-link">Precios</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="navbar-hero-img__container">
                     <div class="navbar-hero-bg"></div>
                     <div class="navbar-hero-img"></div>
@@ -436,5 +457,10 @@
     <a href="#" class="up-btn">
         <i class="fa-solid fa-chevron-up"></i>
     </a>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
+
 </body>
 </html>
