Complete responsiveness info section

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -107,11 +107,11 @@
                 <h2 class="info-title section-title">Descubre, Aprende y <span>Disfruta</span></h2>
                 <p class="info-text">En UnderSound, creemos que la música es mucho más que solo entretenimiento. Es una fuente de aprendizaje, inspiración y conexión. Explora nuevos géneros, sumérgete en melodías introspectivas y rompe barreras con sonidos alternativos. Únete a nosotros, regístrate ahora y desata tu pasión por la música underground.</p>
                 <a class="btn mb-5">Regístrate!</a>
-                <div class="info-card__container d-flex align-items-center justify-content-center gap-5">
+                <div class="info-card__container d-flex align-items-stretch justify-content-center gap-5">
                     <div class="info-card">
                         <img src="./img/learn-card1.png" alt="" class="info-card__img">
-                        <h3 class="info-card__title">Ritmos étnicos del mundo</h3>
-                        <p class="info-card__text">Expande tus horizontes musicales y déjate cautivar por la diversidad del sonido global</p>
+                        <h3 class="info-card__title">Ritmos étnicos</h3>
+                        <p class="info-card__text">Expande tus horizontes musicales y déjate cautivar por la diversidad</p>
                         <a href="" onclick="return false" class="btn btn-card">
                             <i class="fa-regular fa-circle-play"></i>
                             Escuchar
@@ -129,7 +129,7 @@
                     <div class="info-card">
                         <img src="./img/learn-card3.png" alt="" class="info-card__img">
                         <h3 class="info-card__title">Rompiendo barreras</h3>
-                        <p class="info-card__text">Expande tus horizontes musicales y déjate cautivar por la diversidad del sonido global</p>
+                        <p class="info-card__text">Sé testigo de la evolución de la música alternativa expandiendo tus horizontes</p>
                         <a href="" onclick="return false" class="btn btn-card">
                             <i class="fa-regular fa-circle-play"></i>
                             Escuchar
