--- a/undersound/index.html
+++ b/undersound/index.html
@@ -178,7 +178,7 @@
             <div class="container text-center d-flex flex-column align-items-center gap-5">
                 <h2 class="section-title share-title">Comparte <span>tu música</span> con el mundo</h2>
                 <p class="share-text">UnderSound te brinda la oportunidad de compartir tu música original con una audiencia global. Sube tus creaciones y permite que otros disfruten de tu talento y creatividad. Únete a nuestra comunidad musical y haz que tu música resuene en todo el mundo.</p>
-                <div class="share-card__container d-flex align-items-center gap-5">
+                <div class="share-card__container d-flex align-items-stretch gap-5">
                     <div class="share-card d-flex flex-column align-items-center gap-2">
                         <i class="fa-solid fa-microphone share-card__icon"></i>
                         <h3 class="share-card__title">Captura tus melodías</h3>
