Responsive categories section

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -211,7 +211,7 @@
                         <h2 class="section-title categories-title mb-5">Explora nuestras <span>Categorías Musicales</span></h2>
                         <p class="categories-text">UnderSound ofrece una amplia variedad de categorías musicales para satisfacer todos los gustos. Descubre nuevos estilos y géneros en nuestra plataforma.</p>
                     </div>
-                    <div class="categories-options d-flex gap-5 align-items-start justify-content-center">
+                    <div class="categories-options d-flex align-items-start justify-content-end flex-wrap align-content-start">
                         <a href="" onclick="return false" class="btn">Todas</a>
                         <a href="" onclick="return false" class="btn btn-option">Pop</a>
                         <a href="" onclick="return false" class="btn btn-option">Rock</a>
