Responsive plan section

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -329,8 +329,8 @@
                     <a href="" onclick="return false" class=" btn plan-btn">Mensual</a>
                     <a href="" onclick="return false" class="btn plan-btn">Anual</a>
                 </div>
-                <div class="plan-modal__container d-flex align-items-center ">
-                    <div class="plan-modal d-flex flex-column gap-3">
+                <div class="plan-modal__container d-flex align-items-stretch flex-wrap">
+                    <div class="plan-modal d-flex flex-column justify-content-between  gap-3">
                         <h3 class="plan-modal__title">Básico</h3>
                         <p class="plan-modal__price">15.99€</p>
                         <ul>
