Responsive newletter section

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -396,7 +396,7 @@
                 </div>
 
                 <div class="newsletter-content">
-                    <h2 class="section-title mb-4">Regístrate para recibir novedades y canciones más populares cada semana!</h2>
+                    <h2 class="section-title mb-4">¡Regístrate para recibir novedades y canciones más populares cada semana!</h2>
                     <form action="" class="newsletter-form">
                         <input type="email" placeholder="Inserta tu correo electrónico" name="email">
                         <button type="submit">
